# bubblekern-demo

./: .gitignore  Cargo.toml  README.md
scripts/: en_top.py  loop_solve.sh  pair_gen.py  read_analyze.py
src/: lib.rs  svg_writer.rs
