[package]
name = "kern-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "glyph_psy"
path = "bin/glyph_psy.rs"

[dependencies]
base64 = "0.21.0"
clap = { version = "4.3.0", features = ["derive"] }
pico-args = "0.5.0"
ttf-parser = { version = "0.19.0", features = ["std", "opentype-layout", "apple-layout", "variable-fonts", "glyph-names"] }
xmlwriter = "0.1.0"
